--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <title>EZtron</title>
 
-<meta name="description" content="EZtron - 60% Daily ROI!" />
+<meta name="description" content="EZtron - 180% Daily ROI!" />
 <meta name="twitter:card" value="summary_large_image">
-<meta property="og:title" content="EZtron - 60% Daily ROI!" />
+<meta property="og:title" content="EZtron - 180% Daily ROI!" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="index.html" />
 <meta property="og:image" content="social.jpg" />
-<meta property="og:description" content="EZtron - 60% Daily ROI!" />
+<meta property="og:description" content="EZtron - 180% Daily ROI!" />
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -83,7 +83,7 @@
 		   <h3 class="text-left mb-1" style="font-size:1em; color:white;  opacity:1">50% Auto-Reinvest</h3>
           <h1 class="text-white mt-2" style="font-size:2.2em; font-weight:normal;"><strong style="color: #f00">180% </strong><small>Daily ROI</small> <strong>forever! <b></b></strong></h1>
          
-          <h3 class="text-white mb-1" style="font-size:1.3em; font-weight:normal; opacity:10"><strong>240%</strong> TOTAL ROI<br>
+          <h3 class="text-white mb-1" style="font-size:1.3em; font-weight:normal; opacity:10"><strong>180%</strong> DAILY ROI<br>
 		  Up to <strong>15%</strong> Referral BONUS<br>
 		  </h3>
           
@@ -378,8 +378,8 @@
 			<tbody class="table-active">
 			  <tr>
 				<td>#1</td>
-				<td class="pre_launch"><del>10%</del> <strong>10%</strong></td>
-				<td class="full_launch" style="display:none;"><strong>20%</strong></td>
+				<td class="pre_launch"><del>10%</del> <strong>20%</strong></td>
+				<td class="full_launch" style="display:none;"><strong>10%</strong></td>
 				<td data-update="lvl1">...</td>
 			  </tr>
 			  <tr>
